added game documentation

--- a/my-first-game/index.html
+++ b/my-first-game/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Hello! Amaze!</title>
+<title>Chemistry Collection!</title>
 <style>
 body
 {
@@ -19,72 +19,73 @@ body
 <body>
 <div id="game"></div>
 <div id="readme">
-<h2>Your game title</h2>
+<h2>Chemistry Collection!</h2>
 
 <ul>
 <li><strong>Originality:</strong>
-What is original about your game?
+The Chemist has to collect his vials while new bombs are added after vial rows are collected. Each vial collected gives you different scores - green: 1, blue: 3, red: 5. 
 </li>
 
 <li><strong>Technical Merit:</strong>
-What is interesting about your game technology?
+New bombs are added after each row completion. Each vial is worth different scores. Added custom sprite, vials, platforms, background.
 </li>
 
 <li><strong>Prototype Postmortem:</strong>
-What did you learn from this prototype?
-What was the easiest or hardest part of making it?
+I learned how to implement available code and analyzed in order to create my own game. I have no prior experience with javascript or phaser so I took this time to learn the mechanics. The hardest part was creating my own spritesheet to make my own character.    
 </li>
 
 <li><strong>Prototype Assets:</strong>
-Did you make your prototype assets from scratch? Did you borrow them? Cite your sources here.
 <ul>
-<li>Bouncing Phaser image: <a href="https://phaser.io/download/logo">Phaser logo</a></li>
+<li>Phaser first game: <a href="http://phaser.io/examples/v3/category/games/firstgameo">source code</a></li>
+<li>Background: <a href="https://opengameart.org/content/backgrounds-for-2d-platformers">concept art</a></li>
+<li>Sprite: <a href="https://kenney.nl/assets/toon-characters-1">character art</a></li>
+<li>Vials: <a href="https://opengameart.org/content/potion-bottles-2">items art</a></li>
 </ul>
 </li>
 
 <li><strong>Prototype Closest Other Game:</strong>
-Which other game most closely resembles your game? If you are borrowing code from a Phaser Example, you must say so here. If you borrow code from elsewhere, you must say so here.
+Phaser first game
 </li>
 
 <li><strong>High Concept:</strong>
-A one-sentence summary of your game.
+Help the chemist collect his vials while avoiding bombs!
 </li>
 
 <li><strong>Theme:</strong>
-State which of the Storymatic themes you used.
+Chemist Theme
 </li>
 
 <li><strong>Mandated Variety:</strong>
-State which input, randomness, genre, and play style you used in this prototype.
+The game uses direct arrow key inputs to move the character. The bombs move in a deterministic pattern as they bounce of platforms and the boundry. This game is in the style of 2d platform collector.
 </li>
 
 <li><strong>Prototype Goal:</strong>
-What game mechanic is this prototype evaluating?
+I wanted to learn how phaser works and how to code for it. I also wanted to learn how to create my own spritesheets to create characters.
 </li>
 
 <li><strong>Player Experience Goals:</strong>
-What experience do you want players to have when playing your game?
+I want the player to have fun while they avoid bombs and collect vials and try to get a high score.
 </li>
 
 <li><strong>Gameplay:</strong>
-A paragraph describing the actions the player can perform, the system dynamics, and the core mechanic. Include a concise explanation of the prototype’s inputs and their expected effects (how to play). You can also describe game play that is not in the prototype. You may include mock-up images for parts of the game not in the prototype.
+The player starts on the ground of the level and can move up, down, right, left using arrow keys. The player can use the platform to climb onto higher platforms where vials are worth more. Once every vial of any one kind is collected, a new batch of vials is released along with a new bomb. Each vial is worth varying amount of points. Green on the ground row is worth 1, blue on the middle row is worth 3, and red on the upper row is worth 5 points. I wanted to add a leaderboard but I think that is best left for when I have more experience with phaser.    
 </li>
 
 <li><strong>Strategies:</strong>
-What player strategies do you expect will be effective at playing this game?
+The player will decide which rows they wanna clear first for optimum scores to bombs ratios. The player will also have to get used to the movements of the bombs to avoid them.
 </li>
 
 <li><strong>Story/Setting/Premise:</strong>
-A paragraph about the world your game is set in and who the characters are. What makes the game world and its occupants unique and interesting? Do the tokens represent something? If the game has a backstory, mention it here. If the game is abstract, then say so.
-How will the dramatic tension interact with the gameplay tension?
+Set with an industrial background the chemist hero must collect his precious vials while evil corporate bombs with the aim of storm-troopers try to get him. How far will he get on his quest to collect all of his vials?
+Will the bombs ever develop better AI than cyberpunk 2077?
 </li>
 
 <li><strong>Target Audience:</strong>
-A single sentence that describes the demographic you're trying to reach.
+My audience is 2d platform enthusiasts who grew up playing these types of games and for lovers of chemistry and haters of corporate oppression.
 </li>
 
 <li><strong>Play Time:</strong>
-How long does your game take to play?
+Depending on the players skill they can last anywhere from 10 seconds to 1+ minutes
 </li>
 
 </ul>
