--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@ body
 <p>I am making creative and experimental game prototypes! Here is the list of them:
 
 <ol>
-<li><a href="my-first-game">Digital Assignment 1</a></li>
+    <li><a href="Fernandez_D1/">Digital Assignment 1</a></li>
+    <li><a href="Fernandez_D2/">Digital Assignment 2</a></li>
 </ol>
 
 
