--- a/Fernandez_D2/index.html
+++ b/Fernandez_D2/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Chemistry Collection!</title>
+<title>Dune Escape!</title>
 <style>
 body
 {
@@ -19,7 +19,7 @@ body
 <body>
 <div id="game"></div>
 <div id="readme">
-<h2>Chemistry Collection!</h2>
+<h2>Dune Escape!</h2>
 
 <ul>
 <li><strong>Originality:</strong>
