modified value and art

--- a/Fernandez_D2/index.html
+++ b/Fernandez_D2/index.html
@@ -37,9 +37,9 @@ I learned how to use the Tiled software to create tilesets and maps with differe
 <li><strong>Prototype Assets:</strong>
 <ul>
 <li>Tiled Tutorial: <a href="https://medium.com/@michaelwesthadley/modular-game-worlds-in-phaser-3-tilemaps-1-958fc7e6bbd6">source code</a></li>
-<li>Music: <a href="https://opengameart.org/content/egyptian-styledune-style">concept art</a></li>
+<li>Music: <a href="https://opengameart.org/content/egyptian-styledune-style">audio</a></li>
 <li>Sprite: <a href="https://kenney.nl/assets/toon-characters-1">character art</a></li>
-<li>Water bottle: <a href="https://opengameart.org/content/bottle-of-water">items art</a></li>
+<li>Water bottle: <a href="https://opengameart.org/content/bottle-of-water">item art</a></li>
 </ul>
 </li>
 
