--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@ body
 <ol>
     <li><a href="Fernandez_D1/">Digital Assignment 1</a></li>
     <li><a href="Fernandez_D2/">Digital Assignment 2</a></li>
+    <li><a href="Fernandez_D3/">Digital Assignment 3 (skipped)</a></li>
+    <li><a href="Fernandez_D4/">Digital Assignment 4 (D1 iteration)</a></li>
 </ol>
 
 
