--- a/Fernandez_D5/index.html
+++ b/Fernandez_D5/index.html
@@ -23,44 +23,43 @@ body
 
 <ul>
 <li><strong>Originality:</strong>
-The Chemist has to collect his vials while new bombs are added after vial rows are collected. Each vial collected gives you different scores - green: 1, blue: 3, red: 5. 
+Type as many rhyming words as you can before time runs out! 
 </li>
 
 <li><strong>Technical Merit:</strong>
-New bombs are added after each row completion. Each vial is worth different scores. Added custom sprite, vials, platforms, background.
+Used a timer with countdown, used string array for rhyming word, used prompt to get player input, used button with click action
 </li>
 
 <li><strong>Prototype Postmortem:</strong>
-I learned how to implement available code and analyzed in order to create my own game. I have no prior experience with javascript or phaser so I took this time to learn the mechanics. The hardest part was creating my own spritesheet to make my own character.    
+I learned how to use a countdown timer with this game. I also learned how to make string arrays in javascript. I tried to find an easy way to implement player typing text input and the prompt was the easiest way I could find.  
 </li>
 
 <li><strong>Prototype Assets:</strong>
 <ul>
-<li>Phaser first game: <a href="http://phaser.io/examples/v3/category/games/firstgameo">source code</a></li>
-<li>Background: <a href="https://opengameart.org/content/backgrounds-for-2d-platformers">concept art</a></li>
-<li>Sprite: <a href="https://kenney.nl/assets/toon-characters-1">character art</a></li>
-<li>Vials: <a href="https://opengameart.org/content/potion-bottles-2">items art</a></li>
+<li>Timer: <a href="https://phaser.discourse.group/t/countdown-timer/2471/3">source code</a></li>
+<li>Background: <a href="https://www.cliseetiquette.com/speaking-tips-academy-awards/">background</a></li>
+<li>Pointer Code: <a href="https://phaser.io/examples/v3/view/input/mouse/click-sprite">phaser code</a></li>
 </ul>
 </li>
 
 <li><strong>Prototype Closest Other Game:</strong>
-Phaser first game
+I could not find a similar game.
 </li>
 
 <li><strong>High Concept:</strong>
-Help the chemist collect his vials while avoiding bombs!
+Type as many rhyming words as you can before time is up!
 </li>
 
 <li><strong>Theme:</strong>
-Chemist Theme
+Poet Theme
 </li>
 
 <li><strong>Mandated Variety:</strong>
-The game uses direct arrow key inputs to move the character. The bombs move in a deterministic pattern as they bounce of platforms and the boundry. This game is in the style of 2d platform collector.
+The game is driven by the player typing in as many words as they can into the prompt using their keyboard. There is no randomness in the game. I think the player type attracted to this game would be Artists who enjoy being creative with rhymes.
 </li>
 
 <li><strong>Prototype Goal:</strong>
-I wanted to learn how phaser works and how to code for it. I also wanted to learn how to create my own spritesheets to create characters.
+I wanted to focus less on technical merrits and more on creating a unique game. A lot of the stuff I used here was new so it took me a while to get it working. Most of my past games were driven by what I knew how to code and this is my first game driven by an idea that I wanted to execute even if I didn't know how to code it at first.
 </li>
 
 <li><strong>Player Experience Goals:</strong>
@@ -68,24 +67,23 @@ I want the player to have fun while they avoid bombs and collect vials and try t
 </li>
 
 <li><strong>Gameplay:</strong>
-The player starts on the ground of the level and can move up, down, right, left using arrow keys. The player can use the platform to climb onto higher platforms where vials are worth more. Once every vial of any one kind is collected, a new batch of vials is released along with a new bomb. Each vial is worth varying amount of points. Green on the ground row is worth 1, blue on the middle row is worth 3, and red on the upper row is worth 5 points. I wanted to add a leaderboard but I think that is best left for when I have more experience with phaser.    
+The player is given a word and they must click the button and type in as many rhyming words as they can before the timer reaches 0.
 </li>
 
 <li><strong>Strategies:</strong>
-The player will decide which rows they wanna clear first for optimum scores to bombs ratios. The player will also have to get used to the movements of the bombs to avoid them.
+The player can play the game over and over again as they come up with more rhyming words. The challenge becomes how fast they type to reach a higher score if they know enough words.
 </li>
 
 <li><strong>Story/Setting/Premise:</strong>
-Set with an industrial background the chemist hero must collect his precious vials while evil corporate bombs with the aim of storm-troopers try to get him. How far will he get on his quest to collect all of his vials?
-Will the bombs ever develop better AI than cyberpunk 2077?
+The stage lights and mic are on. The crowd is watching. Get up on stage and perform as many rhyming words as you can before your performance time slot ends.
 </li>
 
 <li><strong>Target Audience:</strong>
-My audience is 2d platform enthusiasts who grew up playing these types of games and for lovers of chemistry and haters of corporate oppression.
+My audience is people who enjoy poems and making rhymes. People who like typing games would also be attracted to this game.
 </li>
 
 <li><strong>Play Time:</strong>
-Depending on the players skill they can last anywhere from 10 seconds to 1+ minutes
+30 second timer.
 </li>
 
 </ul>
