--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ body
     <li><a href="Fernandez_D3/">Digital Assignment 3 (passed)</a></li>
     <li><a href="Fernandez_D4/">Digital Assignment 4 (D1 iteration)</a></li>
     <li><a href="Fernandez_D5/">Digital Assignment 5</a></li>
+    <li><a href="Fernandez_D6/">Digital Assignment 6</a></li>
 </ol>
 
 
