--- a/Fernandez_D6/index.html
+++ b/Fernandez_D6/index.html
@@ -36,11 +36,8 @@ body
 
 <li><strong>Prototype Assets:</strong>
 <ul>
-<li>Tiled Tutorial: <a href="https://medium.com/@michaelwesthadley/modular-game-worlds-in-phaser-3-tilemaps-1-958fc7e6bbd6">source code</a></li>
-<li>Music: <a href="https://opengameart.org/content/on-my-way-8-bit-loop">audio</a></li>
-<li>Sprite: <a href="https://kenney.nl/assets/toon-characters-1">robot art</a></li>
-<li>Trophy: <a href="https://opengameart.org/content/golden-trophy-game-ornament">item art</a></li>
-<li>Dice: <a href="https://opengameart.org/content/boardgame-pack">item art</a></li>
+<li>Button Tutorial: <a href="https://snowbillr.github.io/blog/2018-07-03-buttons-in-phaser-3/">source code</a></li>
+
 </ul>
 </li>
 
