--- a/Fernandez_D6/index.html
+++ b/Fernandez_D6/index.html
@@ -23,14 +23,16 @@ body
 
 <ul>
 <li><strong>Originality:</strong>
+Test your knowledge of different flags from across the world!
 
 </li>
 
 <li><strong>Technical Merit:</strong>
-
+Used button and console prompt as well as arrays to store answers and validate user input.
 </li>
 
 <li><strong>Prototype Postmortem:</strong>
+I had trouble creating 3 different button for each choice so I had to resort to using text input for answers. For the next iteration I want to figure out how to use the buttons correctly.
 
 </li>
 
@@ -42,47 +44,42 @@ body
 </li>
 
 <li><strong>Prototype Closest Other Game:</strong>
-
+There are other flag guessing games but they seem to work differently. ex. <a href="https://online.seterra.com/en/fl/2008">world flags</a>
 </li>
 
 <li><strong>High Concept:</strong>
-
-</li>
-
-<li><strong>Theme:</strong>
-
-</li>
-
-<li><strong>Mandated Variety:</strong>
-
+Test your knowledge of different flags from across the world!
 </li>
 
 <li><strong>Prototype Goal:</strong>
-
+I wanted to create a flag guessing game because I've always wanted to learn how to identify flags from around the world.
 </li>
 
 <li><strong>Player Experience Goals:</strong>
+I want the player to feel challenged by the flags but also learn about flags from around the world.
 
 </li>
 
 <li><strong>Gameplay:</strong>
+The player is presented 11 different flags with 3 choices. The player must click the button and input their answer. They advance to the next question if they get it right.
 
 </li>
 
 <li><strong>Strategies:</strong>
+The player can guess any of the three choices until they get it right. They can also play again with knowledge of what each of the flags are after their first game.
 
 </li>
 
 <li><strong>Story/Setting/Premise:</strong>
-
+This game is set up like a little quiz show of the different flags from around the world.
 </li>
 
 <li><strong>Target Audience:</strong>
-
+Puzzle players
 </li>
 
 <li><strong>Play Time:</strong>
-
+2-5 mins
 </li>
 
 </ul>
