game documentaion and new cursor code

--- a/Fernandez_D7/index.html
+++ b/Fernandez_D7/index.html
@@ -28,11 +28,11 @@ Test your knowledge of different flags from across the world!
 </li>
 
 <li><strong>Technical Merit:</strong>
-Used button and console prompt as well as arrays to store answers and validate user input.
+I added individual buttons for each answer choice. The button now registers a mouse click and depending on which answer is chosen it either send you to the next question if correct or subtracts a life if wrong. I also added a lives feature so now players only get 5 lives to be used throught the game. I changed how the game looked to look more polished adding an introduction and ending page. I also added a restart button. The cursor also changes to a hand cursor when you hover over a selection.
 </li>
 
 <li><strong>Prototype Postmortem:</strong>
-I had trouble creating 3 different button for each choice so I had to resort to using text input for answers. For the next iteration I want to figure out how to use the buttons correctly.
+I finally figured out how to use text buttons that register mouse clicks. It also took me a while to figure out how to add the element of lives so the game feels more challenging.
 
 </li>
 
@@ -61,12 +61,12 @@ I want the player to feel challenged by the flags but also learn about flags fro
 </li>
 
 <li><strong>Gameplay:</strong>
-The player is presented 11 different flags with 3 choices. The player must click the button and input their answer. They advance to the next question if they get it right.
+The player is presented 11 different flags with 3 choices. The player must click the text of the right choice. They will either advance to the next question on correct answer or lose a life if they answer incorrectly.
 
 </li>
 
 <li><strong>Strategies:</strong>
-The player can guess any of the three choices until they get it right. They can also play again with knowledge of what each of the flags are after their first game.
+The player can guess any of the three choices until they get it right or run out of lives. They can also play again with knowledge of what each of the flags are after their first game.
 
 </li>
 
