--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ body
     <li><a href="Fernandez_D3/">Digital Assignment 3 (passed)</a></li>
     <li><a href="Fernandez_D4/">Digital Assignment 4 (D1 iteration)</a></li>
     <li><a href="Fernandez_D5/">Digital Assignment 5</a></li>
-    <li><a href="Fernandez_D6/">Digital Assignment 6</a></li>
-    <li><a href="Fernandez_D7/">Digital Assignment 7</a></li>
+    <li><a href="Fernandez_D6/">Iteration Sequence 1: digital prototype</a></li>
+    <li><a href="Fernandez_D7/">Iteration Sequence 1: iterated prototype</a></li>
 </ol>
 
 
