--- a/Fernandez_D7/index.html
+++ b/Fernandez_D7/index.html
@@ -44,7 +44,15 @@ I finally figured out how to use text buttons that register mouse clicks. It als
 </li>
 
 <li><strong>Prototype Closest Other Game:</strong>
-There are other flag guessing games but they seem to work differently. ex. <a href="https://online.seterra.com/en/fl/2008">world flags</a>
+    <ul>
+        <li><a href="Fernandez_D6/">Iteration Sequence 1: digital prototype</a></li>
+        <li>added individual text buttons </li>
+        <li>added restart button</li>
+        <li>added hand cursor</li>
+        <li>added new graphics</li>
+        <li>added lives mechanic</li>
+    </ul>
+
 </li>
 
 <li><strong>High Concept:</strong>
