fixed iterated game link

--- a/Fernandez_D7/index.html
+++ b/Fernandez_D7/index.html
@@ -45,7 +45,7 @@ I finally figured out how to use text buttons that register mouse clicks. It als
 
 <li><strong>Prototype Closest Other Game:</strong>
     <ul>
-        <li><a href="Fernandez_D6/">Iteration Sequence 1: digital prototype</a></li>
+        <li><a href="https://kelly-fernandez.github.io/cs325-game-prototypes/Fernandez_D6/">Iteration Sequence 1: digital prototype</a></li>
         <li>added individual text buttons </li>
         <li>added restart button</li>
         <li>added hand cursor</li>
