--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@ body
 <ol>
     <li><a href="Fernandez_D1/">Digital Assignment 1</a></li>
     <li><a href="Fernandez_D2/">Digital Assignment 2</a></li>
-    <li><a href="Fernandez_D3/">Digital Assignment 3 (passed)</a></li>
+    <li><a href="Fernandez_D3/">Digital Assignment 3 (Pass)</a></li>
     <li><a href="Fernandez_D4/">Digital Assignment 4 (D1 iteration)</a></li>
     <li><a href="Fernandez_D5/">Digital Assignment 5</a></li>
     <li><a href="Fernandez_D6/">Iteration Sequence 1: digital prototype</a></li>
     <li><a href="Fernandez_D7/">Iteration Sequence 1: iterated prototype</a></li>
+    <li><a href="Fernandez_D8/">Iteration Sequence 2: digital prototype (Pass)</a></li>
+
 </ol>
 
 
