--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@ body
     <li><a href="Fernandez_D6/">Iteration Sequence 1: digital prototype</a></li>
     <li><a href="Fernandez_D7/">Iteration Sequence 1: iterated prototype</a></li>
     <li><a href="Fernandez_D8/">Iteration Sequence 2: digital prototype (Pass)</a></li>
+    <li><a href="Fernandez_D9/">Iteration Sequence 2: digital prototype </a></li>
+
 
 </ol>
 
