added music for demo reel

--- a/Fernandez_D7/index.html
+++ b/Fernandez_D7/index.html
@@ -39,6 +39,7 @@ I finally figured out how to use text buttons that register mouse clicks. It als
 <li><strong>Prototype Assets:</strong>
 <ul>
 <li>Button Tutorial: <a href="https://snowbillr.github.io/blog/2018-07-03-buttons-in-phaser-3/">source code</a></li>
+<li>Music: <a href="https://opengameart.org/content/adaptive-music-for-fmod">source</a></li>
 
 </ul>
 </li>
