added demo reel

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ body
     <li><a href="Fernandez_D7/">Iteration Sequence 1: iterated prototype</a></li>
     <li><a href="Fernandez_D8/">Iteration Sequence 2: digital prototype (Pass)</a></li>
     <li><a href="Fernandez_D9/">Iteration Sequence 2: digital prototype </a></li>
+    <li><a href="Demo Reel/">Demo Reel </a></li>
 
 
 </ol>
